--- a/src/App.css
+++ b/src/App.css
@@ -95,7 +95,7 @@ Body {
   display: flex;
   flex-direction: row;
   align-items: center;
-  justify-content: center;
+  justify-content: space-around;
   border-radius: 8px 8px 0 0;
 }
 .homeIcon {
