--- a/src/App.css
+++ b/src/App.css
@@ -6,11 +6,15 @@
   --fontFamily: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
   --bgcolorStat: #e9e9e9;
   --fontStat: #000000;
+  --alertColor: red;
   --bgButtonRed: #ec6464;
   --bgInputGray: #b4b4b6;
 }
 Body {
   font-family: var(--fontFamily);
+}
+.alertDiv {
+  color: var(--alertColor);
 }
 .App {
   text-align: center;
